[package]
name = "vmctrl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vmctrl"
path = "src/main.rs"

[dependencies]
vm-core = { path = "../vm-core" }
clap = { version = "=4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
